--- a/app/src/main/res/layout/activity_login_screen.xml
+++ b/app/src/main/res/layout/activity_login_screen.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -54,7 +54,6 @@
         android:inputType="textPassword" />
 
     <Button
-
         android:layout_marginTop="17dp"
         android:textSize="25sp"
         android:layout_marginLeft="55dp"
@@ -62,7 +61,8 @@
         android:id="@+id/button2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="LogIn" />
+        android:text="@string/btn_text"
+        />
 
 
 </LinearLayout>
