--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,27 +9,30 @@
     tools:context=".MainActivity">
 
     <ImageView
+
         android:layout_width="248dp"
-        android:layout_height="158dp"
+        android:layout_height="168dp"
         android:layout_margin="40dp"
         android:layout_gravity="center"
         android:src="@drawable/lgo"
         android:contentDescription="@string/app_name" />
     <Button
+
+        android:layout_marginBottom="110dp"
         android:textColor="@color/black"
         android:textSize="22sp"
         android:backgroundTint="#b3d1ff"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="50dp"
         android:text="@string/button_text"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         />
     <Button
+
         android:id="@+id/admin"
         android:textSize="20sp"
         android:backgroundTint="#7575a3"
-        android:layout_marginTop="50dip"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:text="@string/button_text_admin"
